Support 16KB page size devices and upgrade AGP

--- a/gradle.properties
+++ b/gradle.properties
@@ -38,3 +38,10 @@ android.enableJetifier=true
 # Support 16KB page size devices
 android.bundle.enableUncompressedNativeLibs=false
 
+# Java toolchain version - required for Android Gradle Plugin 8.13.2
+# Uncomment and set the path to your Java 11+ installation if auto-detect doesn't work
+# org.gradle.java.home=C:/Program Files/Java/jdk-11
+# Use Java 11 or higher - auto-detect and auto-download
+org.gradle.java.installations.auto-detect=true
+org.gradle.java.installations.auto-download=true
+
