将 exported=true 设置为 MainActivity，并修复 Gradle 构建
该提交解决了两个主要问题：

1. 在演示应用中为“MainActivity”设置“android：exported=”true“，以符合更新的Android要求。
2. 通过以下方式解决 Gradle 构建问题：
    * 禁用 Java 安装的自动检测，以避免与非标准 JDK 如 GraalVM 发生冲突。
    * 强制统一Kotlin标准库版本，排除旧的冗余“kotlin-stdlib-jdk7”和“kotlin-stdlib-jdk8”模块。

--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,18 @@ allprojects {
         maven { url 'https://jitpack.io' }
     }
     
+    // 解决 Kotlin 依赖冲突：排除旧版本的 kotlin-stdlib-jdk7 和 kotlin-stdlib-jdk8
+    // 因为 Kotlin 1.8+ 的 kotlin-stdlib 已经包含了这些内容
+    configurations.configureEach {
+        resolutionStrategy {
+            // 强制使用统一的 Kotlin 标准库版本
+            force 'org.jetbrains.kotlin:kotlin-stdlib:1.8.22'
+            // 排除旧版本的 jdk7 和 jdk8 扩展库，它们的内容已包含在 kotlin-stdlib 1.8+ 中
+            exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk7'
+            exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk8'
+        }
+    }
+    
     // Configure Java toolchain for all projects
     afterEvaluate { project ->
         if (project.hasProperty('android')) {
