--- a/gradle.properties
+++ b/gradle.properties
@@ -36,12 +36,16 @@ android.useAndroidX=true
 android.enableJetifier=true
 
 # Support 16KB page size devices
-android.bundle.enableUncompressedNativeLibs=false
+#android.bundle.enableUncompressedNativeLibs=false
 
 # Java toolchain version - required for Android Gradle Plugin 8.13.2
-# Uncomment and set the path to your Java 11+ installation if auto-detect doesn't work
-# org.gradle.java.home=C:/Program Files/Java/jdk-11
-# Use Java 11 or higher - auto-detect and auto-download
-org.gradle.java.installations.auto-detect=true
-org.gradle.java.installations.auto-download=true
+# 注意：Android Gradle Plugin 8.13.2 需要标准的 JDK（OpenJDK 或 Oracle JDK），不支持 GraalVM
+# 请安装 JDK 11 或 17，然后取消注释下面的行并设置正确的路径
+# 例如：org.gradle.java.home=C:/Program Files/Java/jdk-17
+# 或者：org.gradle.java.home=C:/Program Files/Eclipse Adoptium/jdk-11.0.xx-hotspot
+# org.gradle.java.home=C:/Program Files/Java/jdk-17
+
+# 禁用自动检测，避免使用 GraalVM
+org.gradle.java.installations.auto-detect=false
+org.gradle.java.installations.auto-download=false
 
