将gradle.properties中的评论翻译成英文

--- a/gradle.properties
+++ b/gradle.properties
@@ -39,13 +39,13 @@ android.enableJetifier=true
 #android.bundle.enableUncompressedNativeLibs=false
 
 # Java toolchain version - required for Android Gradle Plugin 8.13.2
-# 注意：Android Gradle Plugin 8.13.2 需要标准的 JDK（OpenJDK 或 Oracle JDK），不支持 GraalVM
-# 请安装 JDK 11 或 17，然后取消注释下面的行并设置正确的路径
-# 例如：org.gradle.java.home=C:/Program Files/Java/jdk-17
-# 或者：org.gradle.java.home=C:/Program Files/Eclipse Adoptium/jdk-11.0.xx-hotspot
+# Note: Android Gradle Plugin 8.13.2 requires a standard JDK (OpenJDK or Oracle JDK), GraalVM is not supported
+# Please install JDK 11 or 17, then uncomment the line below and set the correct path
+# Example: org.gradle.java.home=C:/Program Files/Java/jdk-17
+# Or: org.gradle.java.home=C:/Program Files/Eclipse Adoptium/jdk-11.0.xx-hotspot
 # org.gradle.java.home=C:/Program Files/Java/jdk-17
 
-# 禁用自动检测，避免使用 GraalVM
+# Disable auto-detection to avoid using GraalVM
 org.gradle.java.installations.auto-detect=false
 org.gradle.java.installations.auto-download=false
 
