--- a/android-maven-gradle.gradle
+++ b/android-maven-gradle.gradle
@@ -44,7 +44,11 @@ task sourcesJar(type: Jar) {
 
 task javadoc(type: Javadoc) {
     source = android.sourceSets.main.java.sourceFiles
-    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+    destinationDir = file("${buildDir}/docs/javadoc")
+    def bootClasspath = android.getBootClasspath()
+    if (bootClasspath != null && !bootClasspath.isEmpty()) {
+        classpath += project.files(bootClasspath.join(File.pathSeparator))
+    }
     options.encoding = 'UTF-8'
     failOnError false
 }
